--- a/package.json
+++ b/package.json
@@ -16,17 +16,22 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^9.0.0",
     "@nestjs/mapped-types": "^1.2.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "@react-native-community/masked-view": "^0.1.11",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "native-base": "^3.4.17",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
+    "passport-oauth2": "^1.6.1",
     "pg": "^8.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-is": "18.2.0",
+    "react-is": "18.1.0",
     "react-native": "0.70.1",
     "react-native-gesture-handler": "^2.7.0",
     "react-native-reanimated": "^2.10.0",
@@ -73,6 +78,8 @@
     "@testing-library/react-native": "11.1.0",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
+    "@types/passport-jwt": "^3.0.7",
+    "@types/passport-oauth2": "^1.4.11",
     "@types/react": "18.0.20",
     "@types/react-is": "17.0.3",
     "@types/react-native": "0.70.3",
