--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-validator": "^0.13.2",
     "date-fns": "^2.29.3",
     "native-base": "^3.4.17",
+    "nx-cloud": "16.0.5",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-oauth2": "^1.6.1",
@@ -57,13 +58,23 @@
     "styled-components": "5.3.5",
     "tslib": "^2.3.0",
     "typeorm": "^0.3.10",
-    "yarn": "^1.22.19",
-    "nx-cloud": "16.0.5"
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@nrwl/webpack": "^16.1.1",
+    "@nx/detox": "16.0.3",
+    "@nx/eslint-plugin": "16.0.3",
+    "@nx/jest": "16.0.3",
+    "@nx/js": "16.0.3",
+    "@nx/linter": "16.0.3",
+    "@nx/nest": "16.0.3",
+    "@nx/node": "16.0.3",
+    "@nx/react-native": "16.0.3",
+    "@nx/web": "16.0.3",
+    "@nx/workspace": "16.0.3",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/cli": "10.2.2",
     "@react-native-community/cli-platform-android": "10.1.3",
@@ -119,16 +130,6 @@
     "ts-node": "10.9.1",
     "tsc-files": "^1.1.3",
     "typescript": "4.9.4",
-    "yarn-deduplicate": "^6.0.0",
-    "@nx/workspace": "16.0.3",
-    "@nx/js": "16.0.3",
-    "@nx/linter": "16.0.3",
-    "@nx/eslint-plugin": "16.0.3",
-    "@nx/web": "16.0.3",
-    "@nx/jest": "16.0.3",
-    "@nx/node": "16.0.3",
-    "@nx/nest": "16.0.3",
-    "@nx/detox": "16.0.3",
-    "@nx/react-native": "16.0.3"
+    "yarn-deduplicate": "^6.0.0"
   }
 }
