--- a/apps/mobile/ios/Podfile
+++ b/apps/mobile/ios/Podfile
@@ -1,8 +1,8 @@
-require_relative '../../../node_modules/react-native/scripts/react_native_pods'
-require_relative '../../../node_modules/@react-native-community/cli-platform-ios/native_modules'
-require_relative '../../../node_modules/@nx/react-native/nx_post_install'
-
 platform :ios, '12.4'
+
+require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
+require_relative '../node_modules/react-native/scripts/react_native_pods'
+
 install! 'cocoapods', :deterministic_uuids => false
 
 target 'inHEARTive' do
@@ -41,6 +41,5 @@ target 'inHEARTive' do
       :mac_catalyst_enabled => false
     )
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
-    nx_post_install(installer)
   end
 end
