--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -3,27 +3,31 @@
   "version": "3.0.1",
   "private": true,
   "dependencies": {
-    "@react-native-async-storage/async-storage": "*",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@tanstack/react-query": "*",
     "@testing-library/jest-native": "*",
     "@testing-library/react-native": "*",
     "date-fns": "*",
     "jest-each": "*",
+    "metro-config": "^0.73.7",
     "native-base": "*",
-    "react": "*",
+    "react": "18.2.0",
     "react-hook-form": "*",
-    "react-native": "*",
+    "react-native": "^0.71.0",
     "react-native-config": "*",
     "react-native-date-picker": "*",
+    "react-native-device-info": "*",
     "react-native-gesture-bottom-sheet": "^1.1.0",
     "react-native-keyboard-aware-scroll-view": "*",
-    "react-native-safe-area-context": "*",
-    "react-native-svg": "*",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-svg": "^13.7.0",
     "react-native-vector-icons": "*",
+    "react-router": "*",
     "react-router-native": "*",
-    "styled-components": "*",
-    "react-native-device-info": "*",
-    "metro-config": "*",
-    "react-router": "*"
+    "styled-components": "*"
+  },
+  "devDependencies": {
+    "@nrwl/react-native": "^16.1.2",
+    "@nx/react-native": "16.0.3"
   }
 }
