--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
-    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-masked-view/masked-view": "^0.2",
     "@tanstack/react-query": "^4.20.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -37,20 +37,20 @@
     "passport-oauth2": "^1.6.1",
     "pg": "^8.8.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.0",
     "react-is": "18.1.0",
-    "react-native": "0.71.7",
+    "react-native": "^0.71.0",
     "react-native-date-picker": "^4.2.6",
     "react-native-device-info": "^10.4.0",
     "react-native-dotenv": "^3.4.8",
     "react-native-gesture-bottom-sheet": "^1.1.0",
-    "react-native-gesture-handler": "^2.7.0",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-reanimated": "^2.10.0",
+    "react-native-reanimated": "^2.14.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-screens": "^3.18.0",
+    "react-native-screens": "^3.19.0",
     "react-native-vector-icons": "^9.2.0",
     "react-router-native": "^6.4.2",
     "reflect-metadata": "^0.1.13",
@@ -64,6 +64,7 @@
     "@commitlint/cli": "^17.1.2",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@nrwl/nx-cloud": "^16.0.5",
     "@nrwl/webpack": "^16.1.1",
     "@nx/detox": "16.0.3",
     "@nx/eslint-plugin": "16.0.3",
@@ -75,10 +76,10 @@
     "@nx/react-native": "16.0.3",
     "@nx/web": "16.0.3",
     "@nx/workspace": "16.0.3",
-    "@react-native-async-storage/async-storage": "1.17.11",
-    "@react-native-community/cli": "10.2.2",
-    "@react-native-community/cli-platform-android": "10.1.3",
-    "@react-native-community/cli-platform-ios": "10.2.1",
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/cli": "^10.0.0",
+    "@react-native-community/cli-platform-android": "^10.0.0",
+    "@react-native-community/cli-platform-ios": "^10.0.0",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/jest-native": "5.4.1",
     "@testing-library/react-native": "12.0.1",
@@ -88,7 +89,6 @@
     "@types/passport-oauth2": "^1.4.11",
     "@types/react": "18.0.20",
     "@types/react-is": "17.0.3",
-    "@types/react-native": "0.71.6",
     "@types/styled-components": "5.1.6",
     "@types/styled-components-react-native": "^5.2.1",
     "@typescript-eslint/eslint-plugin": "5.59.2",
@@ -108,23 +108,23 @@
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.1",
-    "jest": "29.4.3",
+    "jest": "^29.2.1",
     "jest-circus": "28.1.1",
     "jest-each": "^29.2.0",
     "jest-environment-jsdom": "29.4.3",
     "jest-react-native": "18.0.0",
     "lint-staged": "^13.0.3",
-    "metro": "0.72.3",
+    "metro": "^0.73.7",
     "metro-babel-register": "0.74.1",
-    "metro-react-native-babel-preset": "0.74.1",
-    "metro-react-native-babel-transformer": "0.74.1",
-    "metro-resolver": "0.74.1",
+    "metro-react-native-babel-preset": "^0.73.7",
+    "metro-react-native-babel-transformer": "^0.73.7",
+    "metro-resolver": "^0.73.7",
     "nx": "16.0.3",
     "prettier": "^2.7.1",
     "react-native-config": "1.5.0",
     "react-native-set-version": "^1.1.2",
     "react-native-storybook-loader": "^2.0.5",
-    "react-native-svg": "13.9.0",
+    "react-native-svg": "^13.7.0",
     "react-native-svg-transformer": "1.0.0",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
