--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,8 +77,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pods-
 
-      - name: Bundle init & install
-        run: bundle init && gem update --system && bundle install
+      - name: Bundle install
+        run: bundle install
 
       - name: Install Pods
         run: cd apps/mobile/ios && pod install --repo-update && cd ../../../
