--- a/package.json
+++ b/package.json
@@ -2,22 +2,36 @@
   "name": "inheartive.io",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start": "nx run-many --target=serve --projects=backend,mobile",
+    "start:android": "nx run-android mobile"
+  },
   "private": true,
   "dependencies": {
+    "@nestjs/common": "^9.1.1",
+    "@nestjs/core": "^9.1.1",
+    "@nestjs/platform-express": "^9.1.1",
+    "axios": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.7",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.14.5",
+    "@nestjs/schematics": "^9.1.0",
+    "@nestjs/testing": "^9.1.1",
     "@nx/detox": "16.1.4",
     "@nx/eslint-plugin": "16.1.4",
     "@nx/jest": "16.1.4",
     "@nx/js": "16.1.4",
     "@nx/linter": "16.1.4",
+    "@nx/nest": "^16.1.4",
+    "@nx/node": "16.1.4",
     "@nx/react-native": "16.1.4",
+    "@nx/webpack": "16.1.4",
     "@nx/workspace": "16.1.4",
     "@react-native-community/cli": "10.2.2",
     "@react-native-community/cli-platform-android": "10.2.0",
@@ -42,6 +56,7 @@
     "jest": "^29.4.1",
     "jest-circus": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "jest-react-native": "18.0.0",
     "metro": "0.74.1",
     "metro-babel-register": "0.74.1",
