--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@tanstack/react-query": "^4.29.7",
     "@types/styled-components": "^5.1.26",
     "babel-plugin-module-resolver": "^5.0.0",
@@ -19,9 +21,12 @@
     "react": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-native": "0.71.8",
+    "react-native-date-picker": "^4.2.13",
     "react-native-device-info": "^10.6.0",
     "react-native-dotenv": "^3.4.8",
+    "react-native-gesture-bottom-sheet": "^1.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-web": "~0.18.10",
     "react-router-native": "^6.11.2",
     "styled-component": "^2.8.0",
     "styled-components": "^5.3.10"
