--- a/.github/workflows/eas.yml
+++ b/.github/workflows/eas.yml
@@ -6,6 +6,9 @@ jobs:
     name: EAS Update
     runs-on: ubuntu-latest
     steps:
+      - name: Go to frontend directory
+        run: cd frontend
+
       - name: Check for EXPO_TOKEN
         run: |
           if [ -z "${{ secrets.EXPO_TOKEN }}" ]; then
@@ -19,8 +22,8 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: 18.x
-          cache: npm
+          node-version: 18.10
+          cache: 'npm'
 
       - name: Setup EAS
         uses: expo/expo-github-action@v8
