--- a/frontend/app.json
+++ b/frontend/app.json
@@ -4,7 +4,7 @@
         "slug": "inHEARTive",
         "version": "1.0.0",
         "orientation": "portrait",
-        "icon": "./src/assets/png/icon.png",
+        "icon": "./src/assets/icon.png",
         "splash": {
             "image": "./src/assets/logo.png",
             "resizeMode": "contain",
@@ -31,7 +31,7 @@
             "versionCode": 1000
         },
         "web": {
-            "favicon": "./src/assets/png/favicon.png"
+            "favicon": "./src/assets/favicon.png"
         },
         "runtimeVersion": {
             "policy": "sdkVersion"
