--- a/.github/workflows/eas.yml
+++ b/.github/workflows/eas.yml
@@ -28,7 +28,7 @@ jobs:
           token: ${{ secrets.EXPO_TOKEN }}
 
       - name: Go to frontend directory
-        run: cd ./frontend && ls -al
+        run: ls -al
 
       - name: Install dependencies
         run: npm install
