--- a/.github/workflows/eas.yml
+++ b/.github/workflows/eas.yml
@@ -34,4 +34,4 @@ jobs:
         run: cd ./frontend && npm install
 
       - name: Publish update
-        run: eas update --auto
+        run: cd ./frontend && eas update --auto
