--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "start": "expo start --offline",
+    "android": "expo start --android --offline",
+    "ios": "expo start --ios --offline",
+    "web": "expo start --web --offline",
+    "build": "npx expo export:web && eas update",
+    "deploy": "firebase deploy",
+    "build-deploy": "npm run build && npm run deploy"
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
@@ -30,7 +33,8 @@
     "react-router-native": "^6.11.2",
     "styled-component": "^2.8.0",
     "styled-components": "^5.3.10",
-    "react-native-svg": "13.4.0"
+    "react-native-svg": "13.4.0",
+    "expo-updates": "~0.16.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
